Fix display on small screens

--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ main {
 }
 
 :root:not(.started) main {
-	padding: 2em;
+	padding: 1em;
 }
 
 @media (width > 800px) {
@@ -154,6 +154,7 @@ main {
 		margin: auto;
 		box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.2);
 		align-content: center;
+		padding: 2em;
 	}
 }
 
@@ -197,9 +198,7 @@ header a {
 	display: grid;
 	grid-template-columns: auto min-content;
 	justify-content: center;
-	align-items: center;
 	gap: 1em;
-	font-size: 1.2em;
 }
 
 #room-input-div > h2 {
@@ -213,6 +212,7 @@ header a {
 }
 
 #room-input-div button {
+	font-size: 1.2em;
 	padding: 0.5em 1em;
 }
 
@@ -284,6 +284,7 @@ header a {
 #device-select-div select {
 	border: none;
 	flex-grow: 1;
+	min-width: 0;
 }
 #device-select-div select:not(:first-child) {
 	border-left: white solid 1px;
